TEST_PROGRAMS/VALID/helloworld.go
package main
type IntArray [16]int

type (
    Point struct { x, y float64; } // Some comment here; a semicolon should be inserted anyway
    Polar Point
)

func main() {
        // println("hello world")
}

