TEST_PROGRAMS/INVALID/03/invalid_vardecl_3.go
package main
func f(){
	var x = 10;
	type person struct{
		first, last string
		age, height int
	}
	var z []person;
	var w [20]person;
	var a.first person = "Daniel" // invalid

	return "Damn Daniel..."
}

